--- a/client/package.json
+++ b/client/package.json
@@ -10,14 +10,16 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "crypto-js": "^4.0.0",
+    "dotenv": "^8.2.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
+    "react-google-login": "^5.2.2",
     "react-helmet": "^6.1.0",
     "react-paginate": "^7.1.0",
     "react-process-string": "^1.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.2",
+    "react-scripts": "^4.0.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
