--- a/client/package.json
+++ b/client/package.json
@@ -22,8 +22,7 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.2",
-    "web-vitals": "^1.0.1",
-    "jsonwebtoken": "^8.5.1"
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
